--- a/sii.css
+++ b/sii.css
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-image: url(signupbag.png);
     background-color: black;
     background-size: cover;
     background-position: center;
@@ -21,19 +22,19 @@
     top: 30px;
     left: 10px;
     font-size: 25px;
-    color: blueviolet;
+    color: rgb(137, 177, 242);
   }
 
   .head:hover{
     text-decoration: underline;
-    color: lightblue;
+    color: rgb(109, 32, 175);
   }
   .wrapper{
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(9px);
-    color: #fff;
+    color: #f0f5f6;
     border-radius: 12px;
     padding: 30px 40px;
   }
@@ -65,7 +66,7 @@
   .wrapper .btn{
     width: 100%;
     height: 45px;
-    background: #fff;
+    background: #6a70ec;
     border: none;
     outline: none;
     border-radius: 40px;
@@ -82,7 +83,7 @@
   
   }
   .register-link p a{
-    color: #e81313;
+    color: #2f13e8;
     text-decoration: none;
     font-weight: 600;
   }
