--- a/booking.css
+++ b/booking.css
@@ -1,21 +1,23 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #0e0e0e;
     margin: 0;
     padding: 0;
     display: flex;
+    background:url(bagbooking.png);
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
 .container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
+    width: 400px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(5px);
+    color: #070707;
+    border-radius: 15px;
+    padding: 30px 50px;
 }
 
 h1 {
@@ -43,13 +45,17 @@ h1 {
 
 button {
     width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: #fff;
+    height: 45px;
+    background: #54e3dc;
     border: none;
-    border-radius: 4px;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
+    color: #333;
+    font-weight: 600;
+    
 }
 
 button:hover {
